shared/css/bootstrap_override.css
/* ... */
/* ≥ xxl (1400px, in BS5) test */
@media (min-width: 1400px) {

	#content {
		/*transition: margin-left 0.3s cubic-bezier(.77, 0, .18, 1);*/
		width: 100%;
		box-sizing: border-box;
	}
	#content.pushed {
		margin-left: 400px;
		width: calc(100% - 400px);
	}
	body.wiki-open .ui-dialog { /* Override jQuery UI's inline width */
		width: auto !important;
		max-width: calc(100vw - 400px) !important;
		left: 400px !important; /* start right after the drawer */
		right: 0 !important;
		box-sizing: border-box; /* ensure it stays within viewport */
	}
	.wiki-drawer {
		width: 400px;
		max-width: 90vw;
		transform: translateX(-400px);
	}
	ol.flowXXS, ul.flowXXS {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 226px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXXS li, ul.flowXXS li {
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXXS li a, ul.flowXXS li a {
		padding-right: 3px;
	}
	ol.flowXS, ul.flowXS {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 372px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXS li , ul.flowXS li{
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXS li a, ul.flowXS li a {
		padding-right: 3px;
	}
	ol.flowSm, ul.flowSm {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 501px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowSm li, ul.flowSm li {
		width: 33%;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowSm li a,ul.flowSm li a {
		padding-right: 3px;
	}
	ol.flowMd, ul.flowMd {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 769px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowMd li , ul.flowMd li {
		width: 33%;
		overflow-wrap:anywhere;
		list-style-position:inside;/*makes the number go to the top of the bullet; otherwise, it vert-aligns to middle*/
	}
	ol.flowMd li a, ul.flowMd li a {
		padding-right: 3px;
	}	
	ol.flowLg, ul.flowLg {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 800px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowLg li, ul.flowLg li {
		width: 33%;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowLg li a, ul.flowLg li a  {
		padding-right: 3px;
	}	
	ol.flowXL {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 1500px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXL li, ul.flowXL li {
		width: 33%;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXL li a, ul.flowXL li a {
		padding-right: 3px;
	}
	.tab-content {
		margin-top: -1px;
	}
	ol.flowNone, ul.flowNone {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: auto; /* need to specify height :-( */
		column-count: 1;
	}
	ol.flowNone li ,ul.flowNone li{
		width: 100%;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowNone li a, ul.flowNone li a {
		padding-right: 3px;
	}
	.jqx-combobox-content::after {
		content:"";
		display: block;
		clear: both;
	}
}

